Fix backdrop rendering issues on iOS.

--- a/client/src/components/Backdrop/Backdrop.scss
+++ b/client/src/components/Backdrop/Backdrop.scss
@@ -6,9 +6,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
-    height: --webkit-fill-available;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 
     &-shroud {
